--- a/Proyecto Ortiz-Palacios.ipynb
+++ b/Proyecto Ortiz-Palacios.ipynb
@@ -513,6 +513,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "hola mundo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<script>\n",
     "  $(document).ready(function(){\n",
     "    $('div.prompt').hide();\n",
